--- a/BeerGame/conf/template/beans-domain.xml
+++ b/BeerGame/conf/template/beans-domain.xml
@@ -80,8 +80,136 @@ velocimacro.library = @velocity.macro@
     <description>小売り用受注量群</description>
     <constructor-arg index="0" type="java.lang.String"><value>9</value></constructor-arg>
   </bean>
+  <bean id="wholeSallerAcceptOrderAmount6" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount7" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount8" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount9" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount10" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount11" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount12" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount13" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount14" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount15" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount16" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount17" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount18" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount19" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount20" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount21" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount22" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount23" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount24" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount25" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount26" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount27" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount28" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount29" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount30" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount31" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount32" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount33" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount34" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount35" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount36" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="wholeSallerAcceptOrderAmount37" class="java.lang.Long">
+    <description>小売り用受注量群</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
   <bean id="lastWeekOfGame" class="java.lang.Long">
     <description>ゲーム最終週</description>
-    <constructor-arg index="0" type="java.lang.String"><value>36</value></constructor-arg>
+    <constructor-arg index="0" type="java.lang.String"><value>37</value></constructor-arg>
   </bean>
 </beans>
