ゲームの終了画面から結果をみる画面のリンクを作成しました。　森下 本当はかっこよくその場で表示したいけど、現状はリンクを張っているだけです。

--- a/BeerGame/webapp/WEB-INF/velocity/web/preGame/gameOver.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/preGame/gameOver.vm
@@ -22,7 +22,7 @@
     <p>ゲーム名：$form.game.name ロール：$form.role.name プレイヤ：$form.role.player.name</p>
     <h3>ゲーム終了画面</h3>
     <p>
-      <input type="button" value="結果を見る" onClick="javascript:showResult(this.form);" />
+      <p><a href="$link.setAction('/viewStock').addQueryData('command','init')">結果を見る</a></p>
     </p>
   </div>
   </form>
