【Done】 ・Issue 28: Task:各項目の入力チェックを行う 　・TradeTransactionのAmountに、マイナス値を入力できないようにしました。 　・チーム名、オーナー名、プレイヤー名にトリムをかけるようにしました。
【Memo】
・makeConfigを実行してください。

--- a/BeerGame/webapp/WEB-INF/velocity/web/errorList.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/errorList.vm
@@ -2,7 +2,7 @@
 <div id="errorMessage">
   #foreach($property in $currentForm.message.properties)
     #foreach($msg in $currentForm.message.get($property))
-    $msg<br>
+    <span style="color: red">$msg<br></span>
     #end  
   #end
 </div>  
