テストケース表_修正版100106_r68テスト用_作業用空欄版.xlsにあわせてテストデータ、ならびにテストを修正。

--- a/BeerGame/webapp/WEB-INF/velocity/web/viewStock/view.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/viewStock/view.vm
@@ -7,9 +7,9 @@
 <body>
 #parse("web/errorList.vm")
   <form action="$link.setAction($currentPath)" method="post" id="hiddenForm">
-<script language="javascript" type="text/javascript" src="./js/jquery.js"></script>  
-<script language="javascript" type="text/javascript" src="./js/jquery.flot.js"></script>  
-  
+  <script language="javascript" type="text/javascript" src="./js/jquery.js"></script>
+  <script language="javascript" type="text/javascript" src="./js/jquery.flot.js"></script>
+  <script language="javascript" type="text/javascript" src="./js/excanvas.min.js"></script>
  <div id="placeholder" style="width:600px;height:300px;"></div>  
    
   <script language="javascript" type="text/javascript">
