Issue 34: Bug:発注残が毎週の累計を算出している ・注残の導出処理を、毎週の累計を出さずに、その週の注残を出すように修正しました。 ・画面で、在庫と注残を同じ項目で出すようにしました。在庫は、正数、注残は、負数で表示します。

--- a/BeerGame/webapp/WEB-INF/velocity/web/preGame/start.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/preGame/start.vm
@@ -30,11 +30,7 @@
     <tr>
       <td>出荷</td>
       <td width="50">$form.outbound</td>
-      <td>在庫</td>
-      <td width="50">$form.stock</td>
-    </tr>
-    <tr>
-      <td>注文残</td>
+      <td>在庫／注残</td>
       <td width="50">$form.remain</td>
     </tr>
   </table>
@@ -47,6 +43,8 @@
   <table border=1>
 #foreach($week in $!form.getDebagView())
     <tr>
+#set($index = $velocityCount + 1)
+      <td>$index</td>
 #foreach($tran in $!week)
       <td>$tran.transactionType $tran.amount</td>
 #end
