--- a/BeerGame/webapp/WEB-INF/velocity/web/viewStock/result.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/viewStock/result.vm
@@ -5,8 +5,8 @@
   <title>BeerGame</title>
   <script type="text/javascript" language="javascript">
     <!--
-    function result(formObj) {
-      formObj.command.value='result';
+    function showResult(formObj) {
+      formObj.command.value='showResult';
       formObj.submit();
     }
     -->
@@ -19,11 +19,18 @@
   <input type="hidden" name="command" />
   <div id="main">
     <h1>ビールゲーム</h1>
-    <p>ゲーム名：$form.game.name ロール：$form.role.name プレイヤ：$form.role.player.name</p>
-    <h3>ゲーム終了画面</h3>
-    <p>
-      <p><a href="$link.setAction('/viewStock').addQueryData('command','result').addQueryData('gameId',$form.game.id)">結果を見る</a></p>
-    </p>
+    <p>ゲーム名：$form.gameId ロール：$form.roleId プレイヤ：$form.role.player.name</p>
+    <h3>結果表示画面</h3>
+    <table border=1>
+      <tr>
+        <td>累計在庫数</td>
+        <td>累計発注残数</td>
+      </tr>
+      <tr>
+        <td>ほげ</td>
+        <td>hoge</td>
+      </tr>
+    </table>
   </div>
   </form>
 #parse("web/footer.vm")
