--- a/BeerGame/webapp/WEB-INF/velocity/web/preGame/start.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/preGame/start.vm
@@ -34,10 +34,19 @@
       <td width="50">$form.remain</td>
     </tr>
   </table>
-  
-  <p>発注数&nbsp<input type="text" name="order" />
-  <input type="button" value="注文" onClick="javascript:orderQuantity(this.form);" /></p>
+  <br />
+
+  <table>
+    <tr>
+      <td>発注数&nbsp<input type="text" name="order" /></td>
+      <td><input type="button" value="注文" onClick="javascript:orderQuantity(this.form);" /></td>
+#if($form.isOwner())
+      <td><a href="$link.setAction('/viewStock').addQueryData('command','result').addQueryData('gameId',$form.game.id)">結果を見る</a></td>
+#end
+    </tr>
+  </table>
  </div>
+
 
   <h1>取引表示</h1>
   <table border=1>
