ログイン時の処理を修正しました。 ロールが存在しないときのエラーと、４つロールが揃っていないときのエラーを追加しました。 エラーメッセージを追加したので、makeConfig,makeShemaAccessorを行ってください。

--- a/BeerGame/webapp/WEB-INF/velocity/web/preGame/login.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/preGame/login.vm
@@ -48,7 +48,7 @@
       <tr>
         <td></td>
         <td align=center><input type="button" value="ログイン" onClick="javascript:loginCheck(this.form);" /></td>
-        <td align=center><input type="button" value="ｷｬﾝｾﾙ" onClick="javascript:init(this.form);" /></td>
+        <td align=center><input type="button" value="ｷｬﾝｾﾙ" onClick="location = '$link.setAction('/top')'" /></td>
       </tr>
     </table>
   </div>
