--- a/BeerGame/webapp/WEB-INF/velocity/web/preGame/game.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/preGame/game.vm
@@ -33,8 +33,8 @@
       </tr>
       <tr>
         <td></td>
-        <td align=center><input type="button" value="登録" onClick="javascript:addGame(this.form);" /></td>
-        <td align=center><input type="button" value="ｷｬﾝｾﾙ" onClick="javascript:init(this.form);" /></td>
+        <td align=center><input type="button" value="登録" onClick="javascript:addGame(this.form); this.disabled = true;" /></td>
+        <td align=center><input type="button" value="ｷｬﾝｾﾙ" onClick="javascript:init(this.form); this.disabled = true;" /></td>
       </tr>
     </table>
   </div>
