--- a/BeerGame/webapp/WEB-INF/velocity/web/preGame/start.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/preGame/start.vm
@@ -39,7 +39,7 @@
   <table>
     <tr>
       <td>発注数&nbsp<input type="text" name="order" /></td>
-      <td><input type="button" value="注文" onClick="javascript:orderQuantity(this.form);" /></td>
+      <td><input type="button" value="注文" onClick="javascript:orderQuantity(this.form); this.disabled = true;" /></td>
 #if($form.isOwner())
       <BR/>
       <td><a href="$link.setAction('/viewStock').addQueryData('command','result').addQueryData('gameId',$form.game.id).addQueryData('roleId',$form.role.id)">結果を見る</a></td>
