--- a/BeerGame/webapp/WEB-INF/velocity/web/preGame/game.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/preGame/game.vm
@@ -3,8 +3,10 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" href="./css/style.css" type="text/css" />
   <title>BeerGame</title>
+  <script language="javascript" type="text/javascript" src="./js/common.js"></script>
   <script type="text/javascript" language="javascript">
     <!--
+
     function addGame(formObj) {
       formObj.command.value='addGame';
       formObj.submit();
