--- a/BeerGame/webapp/WEB-INF/velocity/web/preGame/login.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/preGame/login.vm
@@ -2,6 +2,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" href="./css/style.css" type="text/css" />
+  <script language="javascript" type="text/javascript" src="./js/common.js"></script>
   <title>ログイン</title>
   <script type="text/javascript" language="javascript">
   <!--
