--- a/BeerGame/webapp/WEB-INF/velocity/web/viewStock/result.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/viewStock/result.vm
@@ -3,9 +3,160 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" href="./css/style.css" type="text/css" />
   <script language="javascript" type="text/javascript" src="./js/common.js"></script>
+  <script language="javascript" type="text/javascript" src="./js/jquery.js"></script>
+  <script language="javascript" type="text/javascript" src="./js/jquery.flot.js"></script>
+  <script language="javascript" type="text/javascript" src="./js/excanvas.min.js"></script>
+  <script language="javascript" type="text/javascript">
+  $(function () {
+    //データ  
+    var roles = [];
+    #set($max = 0)
+    #set($min = 0)
+    #foreach($role in $!currentForm.getRoles())
+      #set($map = $currentForm.getStockList($currentForm.teamName,$role.name))
+      #set($id = $role.id)
+      var d = [];
+        #foreach($key in $map.keySet())
+          #set($amount = $map.get($key))
+
+          d.push([$key, $amount]);
+          #if($amount > $max)
+            #set($max = $amount)
+          #end
+
+          #if($amount < $min)
+            #set($min = $amount)
+          #end
+
+        #end
+      roles.push(d);
+    #end
+
+    //スケールに10%の余裕を持たせる
+    #set($min = $min * 1.1)
+    #set($max = $max * 1.1)
+
+    //グラフ表示 
+    jQuery.plot($("#wholeSeller"),
+    [
+      {
+         color  : "red",
+         label : "小売り",
+         data: roles[0],
+         lines: { show: true, fill: true },
+         points: { show: true },
+      }
+    ],
+      {
+        yaxis:
+        {
+          min: $min,
+          max: $max,
+          ticks: 20,
+          tickDecimals: 0,
+        },
+        xaxis:
+        {
+          min: 1,
+          max: 37,
+          ticks: 37,
+          tickDecimals: 0,
+        },
+      }
+    );
+    //グラフ表示 
+    jQuery.plot($("#supplier1"),
+    [
+      {
+         color  : "blue",
+         label  : "卸1",
+         data   : roles[3],
+         lines  : { show: true, fill: true },
+         points : { show: true },
+      }
+    ],
+      {
+        yaxis:
+        {
+          min: $min,
+          max: $max,
+          ticks: 20,
+          tickDecimals: 0,
+        },
+        xaxis:
+        {
+          min: 1,
+          max: 37,
+          ticks: 37,
+          tickDecimals: 0,
+        },
+      }
+    );
+    //グラフ表示 
+    jQuery.plot($("#supplier2"),
+    [
+      {
+         color  : "green",
+         label : "卸２",
+         data: roles[1],
+         lines: { show: true, fill: true },
+         points: { show: true },
+      }
+    ],
+      {
+        yaxis:
+        {
+          min: $min,
+          max: $max,
+          ticks: 20,
+          tickDecimals: 0,
+        },
+        xaxis:
+        {
+          min: 1,
+          max: 37,
+          ticks: 37,
+          tickDecimals: 0,
+        },
+      }
+    );
+    //グラフ表示 
+    jQuery.plot($("#maker"),
+    [
+      {
+         color  : "orange",
+         label : "メーカー",
+         data: roles[2],
+         lines: { show: true, fill: true },
+         points: { show: true },
+      }
+    ],
+      {
+        yaxis:
+        {
+          min: $min,
+          max: $max,
+          ticks: 20,
+          tickDecimals: 0,
+        },
+        xaxis:
+        {
+          min: 1,
+          max: 37,
+          ticks: 37,
+          tickDecimals: 0,
+        },
+      }
+    );
+  });
+  function init(formObj) {
+    formObj.command.value='init';
+    formObj.submit();
+  }
+  </script>
   <title>BeerGame</title>
 </head>
-
+<body>
 #parse("web/errorList.vm")
 #set($form = $currentForm)
   <form action="$link.setAction($currentPath)" method="post" id="hiddenForm">
@@ -24,6 +175,21 @@
         <td>$form.getGame().getRemain()</td>
       </tr>
     </table>
+    <table>
+        <tr>
+          <td><div id="wholeSeller" style="width:512px;height:384px;"></div></td>
+          <td><div id="supplier1" style="width:512px;height:384px;"></div></td>
+        </tr>
+        <tr>
+          <td><div id="supplier2" style="width:512px;height:384px;"></div></td>
+          <td><div id="maker" style="width:512px;height:384px;"></div></td>
+        </tr>
+    </table>
+#if($form.isOwner())
+#set($a=$form.role.name)
+    <input type="button" value="発注画面に戻る" onClick="location = '$link.setAction('/preGame').addQueryData('command','loginCheck').addQueryData('gameId',$form.game.id).addQueryData('roleId',$form.role.id)'; this.disabled = true;" >
+#end
+    <input type="button" value="TOP" onClick="location = '$link.setAction('/top')'; this.disabled = true;" />
   </div>
   </form>
 #parse("web/footer.vm")
