--- a/BeerGame/webapp/WEB-INF/velocity/web/viewStock/result.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/viewStock/result.vm
@@ -8,7 +8,35 @@
   <script language="javascript" type="text/javascript" src="./js/excanvas.min.js"></script>
   <script language="javascript" type="text/javascript">
   $(function () {
-    //データ
+
+    //ロールごとのデータ  
+    var roles = [];
+    #set($max = 0)
+    #set($min = 0)
+    #foreach($role in $!currentForm.getRoles())
+      #set($map = $currentForm.getStockList($currentForm.teamName, $role.name))
+      var d = [];
+      #foreach($key in $map.keySet())
+        #set($amount = $map.get($key))
+        d.push([$key, $amount]);
+        #if($amount > $max)
+          #set($max = $amount)
+        #end
+
+        #if($amount < $min)
+          #set($min = $amount)
+        #end
+
+      #end
+      roles["$role.name"] = d;
+    #end
+
+    //スケールに10%の余裕を持たせる
+    #set($min = $min * 1.1)
+    #set($max = $max * 1.1)
+
+
+    //累計在庫と累計注残データ
     var stock = [];
     #foreach($amount in $!currentForm.getGame().getWeeklyStock())
       stock.push([$velocityCount, $amount]);
@@ -18,6 +46,52 @@
     #foreach($amount in $!currentForm.getGame().getWeeklyRemain())
       remain.push([$velocityCount, $amount]);
     #end
+
+　　//グラフ表示 
+    jQuery.plot($("#roles"),
+    [
+      {
+         color  : "red",
+         label : "小売り",
+         data: roles["小売り"],
+         lines: { show: true, fill: true },
+         points: { show: true },
+      },
+      {
+         color  : "blue",
+         label  : "卸１",
+         data   : roles["卸１"],
+         lines  : { show: true, fill: true },
+         points : { show: true },
+      },
+      {
+         color  : "green",
+         label : "卸２",
+         data: roles["卸２"],
+         lines: { show: true, fill: true },
+         points: { show: true },
+      },
+　　　{
+         color  : "orange",
+         label : "メーカ",
+         data: roles["メーカ"],
+         lines: { show: true, fill: true },
+         points: { show: true },
+      }],
+      {
+        yaxis:
+        {
+          ticks: 20,
+          tickDecimals: 0,
+        },
+        xaxis:
+        {
+          min: 1,
+          max: 37,
+          ticks: 37,
+          tickDecimals: 0,
+        },
+      });
     //グラフ表示 
     jQuery.plot($("#weeklyResult"),
     [
@@ -81,7 +155,12 @@
     </table>
       <table>
         <tr>
-          <td><div id="weeklyResult" style="width:1024px;height:768px;"></div></td>
+          <td>累計在庫数と累計発注残数<br /><div id="weeklyResult" style="width:1024px;height:768px;"></div></td>
+        </tr>
+      </table>
+      <table>
+ 　　　　<tr>
+          <td>ロールごとの在庫数と発注残数<div id="roles" style="width:1024px;height:768px;"></div></td>
         </tr>
       </table>
 #if($form.isOwner())
